[package]
name = "flashblocks-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["providers", "signers", "network"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
