[package]
name = "alloy-flashblocks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flashblocks-monitor"
path = "src/bin/flashblocks_monitor.rs"

[[bin]]
name = "flashblocks-ws"
path = "src/bin/flashblocks_ws.rs"

[dependencies]
alloy = { version = "0.11.1", features = ["providers", "full"] }
alloy-transport-http = "0.11.1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
tokio-websockets = { version = "0.7", features = ["client", "fastrand", "sha1_smol"] }
reqwest = { version = "0.12.12", features = ["json"] }
